# steampipe-mcp-golang

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
cmd/steampipe-mcp/: config.go  config_test.go  db.go  db_test.go  main.go  prompt.go  resource.go  tools.go  tools_test.go
docs/: MCP-SQL-GUIDE.md  SQL-MCP.md  claude-plan.md  steampipe_mcp_plan.md
tools/: pydantic_ai_test_mcp.py
