[project]
name = "steampipe-mcp-tests"
version = "0.1.0"
description = "Verification and test harness for Steampipe Go MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai>=1.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-genai>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
